# Roostoo-bot-v2

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
bot/: __init__.py  binance_data.py  config.py  data_store.py  executor.py  features.py  forward_ic.py  liquidate.py  live_models.py  live_state.py  live_trader.py  logger.py  main.py  microstructure.py  model_store.py  monitoring.py  roostoo_client.py  scheduler.py  telemetry.py
bot/backtest/: __init__.py  cluster_regime_gate_experiment.py  portfolio.py  rank_decay_exit_experiment.py  refit_policy_experiment.py  regime_diagnostics.py  regime_throttle_experiment.py  ridge_score.py  ridge_score_portfolio.py  simulated_executor.py
bot/strategy/: __init__.py  regime.py  ridge.py
data/models/: cluster_regime_gate.json  ridge_selection.json
notebooks/feature/: Feature IC checks - 1h candles.ipynb  feature_checks_1h_h6_metadata.json
notebooks/microstructure/: IC checks - 1h candles.ipynb  Momentum roll-impact IS OS - 1h candles.ipynb  Ridge score walkforward - 1h candles.ipynb  ic_checks_1h_candles_metadata.json  (+9 more)
scripts/: liquidate_and_restart_live.sh
tests/: test_binance_data.py  test_data_store.py  test_deployment_config.py  test_features.py  test_forward_ic.py  test_liquidate.py  test_live_models.py  test_live_state.py  test_microstructure.py  test_model_store.py  test_monitoring.py  test_portfolio_backtest.py  test_refit_policy_experiment.py  test_regime.py  test_regime_diagnostics.py  test_roostoo_client.py  test_scheduler.py  test_simulated_executor.py  test_strategy_ridge.py  test_telemetry.py
(+46 files in other folders)
